[package]
name = "tx-processor-engine"
version = "0.3.0"
edition = "2021"
authors = ["Shinde Arjun"]
description = "An awesome 😎 transaction processing engine"
homepage = "https://github.com/yourarj/tx-processor-engine"
publish = false
default-run = "tx_executor"

[lib]
name = "tx_processing_engine"
path = "src/lib.rs"

[[bin]]
name = "tx_executor"
path = "src/main.rs"

[profile.dev]
opt-level = 3
lto = "fat"

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
thiserror = "1.0"

# for tokio approach
tokio = { version = "1", features = ["full"] }
num_cpus = "1.0"
