[package]
name = "tx-processor-engine"
version = "1.1.0"
edition = "2021"
authors = ["Shinde Arjun"]
description = "An awesome 😎 transaction processing engine"
homepage = "https://github.com/yourarj/tx-processor-engine"
publish = false
default-run = "tx_executor"

[lib]
name = "tx_processing_engine"
path = "src/lib.rs"

[[bin]]
name = "tx_executor"
path = "src/main.rs"
required-features = ["csv_sync"]

[[bin]]
name = "tokio_tx_executor"
path = "src/bin/tokio_tx_executor.rs"
required-features = ["tokio"]

[[bin]]
name = "rayon_tx_executor"
path = "src/bin/rayon_tx_executor.rs"
required-features = ["rayon"]

[[bin]]
name = "apache_arrow_tx_executor"
path = "src/bin/apache_arrow_tx_executor.rs"
required-features = ["arrow"]

[[bin]]
name = "async_tx_executor"
path = "src/bin/csv_async_engine.rs"
required-features = ["csv_async"]


[profile.dev]
opt-level = 3
lto = "fat"

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

# detect avaialable cpus
num_cpus = { version = "1.0", optional = true }

# sync csv approach
csv = { version = "1", optional = true }

# async csv approach
csv-async = { version = "1", features = ["tokio"], optional = true }


# apache arrow approach
arrow = { version = "19", features = ["csv"], optional = true }

# for tokio approach
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }


rayon = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }


[features]
default = ["csv_sync"]

csv_sync = ["dep:csv"]
csv_async = ["dep:csv-async", "dep:tokio", "dep:tokio-stream"]
rayon = ["csv_sync", "dep:num_cpus", "dep:rayon", "dep:crossbeam-channel"]
tokio = ["csv_sync", "dep:num_cpus", "dep:tokio"]
arrow = ["dep:arrow"]
